[package]
name = "angp"
version = "3.5.12"
edition = "2021"
description = "NeuroGraph (ANGP) v3.5.12 - Adaptive Neural Gossip Protocol. Fixes honest0 self-observation bug from v3.5.11."

[lib]
name = "neurograph"
path = "src/lib.rs"

[dependencies]
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flume = "0.10"
sha2 = "0.10"
ring = "0.17"
rayon = "1.10"
ed25519-dalek = { path = "vendor/ed25519-dalek", features = ["rand_core", "batch"] }
bincode = "1.3"

[features]
default = []
# v3.5.2: libp2p networking (optional, pentru mainnet P2P real).
# Activat prin: cargo build --features libp2p-net
libp2p-net = []